# gepa

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.examples  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.lmstudio-real.yml  docker-compose.yml  pyproject.toml  run_lmstudio_advanced_test.sh  test-meta-orchestrator-real.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  provider_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md
.github/workflows/: ci.yml  release.yml
docker/development/: Dockerfile
docker/meta-orchestrator/: Dockerfile
docs/development/: meta_orchestrator_guide.md
docs/integrations/: lmstudio.md
examples/: README.md  advanced_algorithms_demo.py  code_generation.py  custom_metrics.py  meta_orchestrator_config_examples.py  meta_orchestrator_lmstudio_test.py  meta_orchestrator_quickstart.py  multi_provider.py  quickstart.py  text_summarization.py
examples/providers/: __init__.py  lmstudio_advanced_test.py  lmstudio_algorithms_test.py  lmstudio_optimization.py
src/gepa/: __init__.py  cli.py  config.py
src/gepa/algorithms/advanced/: __init__.py  adaptive_comparison.py  compatibility_analysis.py  complementarity_analysis.py  desirability_scoring.py  intelligent_selection.py  score_prediction.py  strategic_sampling.py
src/gepa/core/: __init__.py  algorithm3.py  algorithm4.py  mutation.py  optimizer.py  pareto.py  system.py
src/gepa/database/: __init__.py  connection.py  migrations.py  models.py  repositories.py
src/gepa/evaluation/: __init__.py  base.py  metrics.py
src/gepa/inference/: __init__.py  anthropic_client.py  base.py  factory.py  ollama_client.py  openai_client.py
src/gepa/meta_orchestrator/: __init__.py  config.py  coordination.py  hyperopt.py  orchestrator.py  prompt_evolver.py  rl_selector.py  state.py  topology_evolver.py
src/gepa/observability/: __init__.py  logging.py  metrics.py  tracing.py
testing/: README.md
testing/lmstudio/: Dockerfile.test  README.md  docker-compose.advanced.yml  docker-compose.test.yml  test_lmstudio.sh
testing/meta_orchestrator/: Dockerfile  README.md  docker-compose.yml
tests/: conftest.py
tests/integration/: test_database.py  test_meta_orchestrator_integration.py  test_optimizer.py
tests/integration/providers/: README.md  test_lmstudio_connection.py
tests/unit/: test_algorithms.py  test_meta_orchestrator.py  test_metrics.py  test_pareto.py
